// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Package Json Utils add scripts, dependencies and test config for existing project 1`] = `
Object {
  "author": "",
  "dependencies": Object {
    "@nestjs/common": "^7.0.0",
    "@nestjs/core": "^7.0.0",
    "@nestjs/platform-express": "^7.0.0",
    "@sap-cloud-sdk/core": "^undefined",
    "reflect-metadata": "^0.1.13",
    "rimraf": "^3.0.2",
    "rxjs": "^6.5.4",
  },
  "description": "",
  "devDependencies": Object {
    "@nestjs/cli": "^7.0.0",
    "@nestjs/schematics": "^7.0.0",
    "@nestjs/testing": "^7.0.0",
    "@sap-cloud-sdk/cli": "^undefined",
    "@sap-cloud-sdk/test-util": "^undefined",
    "@types/express": "^4.17.3",
    "@types/jest": "25.1.4",
    "@types/node": "^13.9.1",
    "@types/supertest": "^2.0.8",
    "@typescript-eslint/eslint-plugin": "^2.23.0",
    "@typescript-eslint/parser": "^2.23.0",
    "eslint": "^6.8.0",
    "eslint-config-prettier": "^6.10.0",
    "eslint-plugin-import": "^2.20.1",
    "jest": "^25.1.0",
    "prettier": "^1.19.1",
    "supertest": "^4.0.2",
    "ts-jest": "25.2.1",
    "ts-loader": "^6.2.1",
    "ts-node": "^8.6.2",
    "tsconfig-paths": "^3.9.0",
    "typescript": "^3.7.4",
  },
  "jest": Object {
    "coverageDirectory": "../coverage",
    "moduleFileExtensions": Array [
      "js",
      "json",
      "ts",
    ],
    "rootDir": "src",
    "testEnvironment": "node",
    "testRegex": ".spec.ts$",
    "transform": Object {
      "^.+\\\\.(t|j)s$": "ts-jest",
    },
  },
  "license": "UNLICENSED",
  "name": "nest",
  "private": true,
  "scripts": Object {
    "build": "nest build",
    "ci-backend-unit-test": "echo \\"Test your application and write results in a JUnit format to \`s4hana_pipeline/reports/backend-unit/\` and coverage in a cobertura format to \`s4hana_pipeline/reports/coverage/backend-unit/\`\\"",
    "ci-build": "echo \\"Use this to compile or minify your application\\"",
    "ci-it-backend": "echo \\"Test your application and write results in a JUnit format to \`s4hana_pipeline/reports/backend-integration/\` and coverage in a cobertura format to \`s4hana_pipeline/reports/coverage/backend-integration/\`\\"",
    "ci-package": "sap-cloud-sdk package --include=\\"package.json,package-lock.json,index.js,dist/**/*\\"",
    "format": "prettier --write \\"src/**/*.ts\\" \\"test/**/*.ts\\"",
    "lint": "eslint \\"{src,apps,libs,test}/**/*.ts\\" --fix",
    "prebuild": "rimraf dist",
    "start": "nest start",
    "start:debug": "nest start --debug --watch",
    "start:dev": "nest start --watch",
    "start:prod": "node dist/main",
    "test": "jest",
    "test:cov": "jest --coverage",
    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
    "test:e2e": "jest --config ./test/jest-e2e.json",
    "test:watch": "jest --watch",
  },
  "version": "0.0.1",
}
`;

exports[`Package Json Utils add scripts, dependencies and test config for scaffolded project 1`] = `
Object {
  "author": "",
  "dependencies": Object {
    "@nestjs/common": "^7.0.0",
    "@nestjs/core": "^7.0.0",
    "@nestjs/platform-express": "^7.0.0",
    "@sap-cloud-sdk/core": "^undefined",
    "reflect-metadata": "^0.1.13",
    "rimraf": "^3.0.2",
    "rxjs": "^6.5.4",
  },
  "description": "",
  "devDependencies": Object {
    "@nestjs/cli": "^7.0.0",
    "@nestjs/schematics": "^7.0.0",
    "@nestjs/testing": "^7.0.0",
    "@sap-cloud-sdk/cli": "^undefined",
    "@sap-cloud-sdk/test-util": "^undefined",
    "@types/express": "^4.17.3",
    "@types/jest": "25.1.4",
    "@types/node": "^13.9.1",
    "@types/supertest": "^2.0.8",
    "@typescript-eslint/eslint-plugin": "^2.23.0",
    "@typescript-eslint/parser": "^2.23.0",
    "eslint": "^6.8.0",
    "eslint-config-prettier": "^6.10.0",
    "eslint-plugin-import": "^2.20.1",
    "jest": "^25.1.0",
    "jest-junit": "^undefined",
    "prettier": "^1.19.1",
    "supertest": "^4.0.2",
    "ts-jest": "25.2.1",
    "ts-loader": "^6.2.1",
    "ts-node": "^8.6.2",
    "tsconfig-paths": "^3.9.0",
    "typescript": "^3.7.4",
  },
  "jest": Object {
    "collectCoverage": true,
    "coverageDirectory": "../s4hana_pipeline/reports/coverage-reports/backend-unit",
    "coverageReporters": Array [
      "text",
      "cobertura",
    ],
    "moduleFileExtensions": Array [
      "js",
      "json",
      "ts",
    ],
    "reporters": Array [
      "default",
      Array [
        "jest-junit",
        Object {
          "outputDirectory": "./s4hana_pipeline/reports/backend-unit",
          "suiteName": "backend unit tests",
        },
      ],
    ],
    "rootDir": "src",
    "testEnvironment": "node",
    "testRegex": ".spec.ts$",
    "transform": Object {
      "^.+\\\\.(t|j)s$": "ts-jest",
    },
  },
  "license": "UNLICENSED",
  "name": "nest",
  "private": true,
  "scripts": Object {
    "build": "nest build",
    "ci-backend-unit-test": "jest --ci",
    "ci-build": "npm run build",
    "ci-e2e": "echo \\"Test your application and write results in a JUnit format to \`s4hana_pipeline/reports/e2e/\`\\"",
    "ci-frontend-unit-test": "echo \\"Test your application and write results in a JUnit format to \`s4hana_pipeline/reports/frontend-unit/\` and coverage in a cobertura format to \`s4hana_pipeline/reports/coverage/frontend-unit/\`\\"",
    "ci-it-backend": "jest --ci --config ./test/jest-e2e.json",
    "ci-package": "sap-cloud-sdk package --ci",
    "deploy": "npm run build && sap-cloud-sdk package && cf push",
    "format": "prettier --write \\"src/**/*.ts\\" \\"test/**/*.ts\\"",
    "lint": "eslint \\"{src,apps,libs,test}/**/*.ts\\" --fix",
    "prebuild": "rimraf dist",
    "start": "nest start",
    "start:debug": "nest start --debug --watch",
    "start:dev": "nest start --watch",
    "start:prod": "node dist/main",
    "test": "jest",
    "test:cov": "jest --coverage",
    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
    "test:e2e": "jest --config ./test/jest-e2e.json",
    "test:watch": "jest --watch",
  },
  "version": "0.0.1",
}
`;

exports[`Package Json Utils should parse the package.json 1`] = `
Array [
  "author",
  "dependencies",
  "description",
  "devDependencies",
  "jest",
  "license",
  "name",
  "private",
  "scripts",
  "version",
]
`;
